--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ node_modules
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
-/build
+.svelte-kit
+build
 
 # OS
 .DS_Store
@@ -15,9 +15,15 @@ Thumbs.db
 # Env
 .env
 .env.*
+*.local
 !.env.example
 !.env.test
 
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Docker local-only stuff
+Dockerfile.dev
+docker-compose.yml
+docker-compose.*.yml
